scripts/nullness/annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8.txt
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/style/Styler.java:24: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/style/AxesChartStyler.java:24: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/demo/charts/realtime/RealtimeChart05.java:32: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/demo/charts/realtime/RealtimeChart04.java:31: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/demo/charts/realtime/RealtimeChart01.java:29: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/standalone/readme/SwingWorkerRealTime.java:27: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/style/AxesChartStyler.java:82: error: cannot find symbol
  @Initializer @Override
   ^
  symbol:   class Initializer
  location: class AxesChartStyler
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/style/Styler.java:101: error: cannot find symbol
  @Initializer protected void setAllStyles() {
   ^
  symbol:   class Initializer
  location: class Styler
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/demo/charts/realtime/RealtimeChart05.java:84: error: cannot find symbol
  @Initializer @Override
   ^
  symbol:   class Initializer
  location: class RealtimeChart05
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/demo/charts/realtime/RealtimeChart04.java:97: error: cannot find symbol
  @Initializer @Override
   ^
  symbol:   class Initializer
  location: class RealtimeChart04
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/demo/charts/realtime/RealtimeChart01.java:81: error: cannot find symbol
  @Initializer @Override
   ^
  symbol:   class Initializer
  location: class RealtimeChart01
../annotator/url89849c8c5b_timmolter_XChart_tgz-pJ8-org_knowm_xchart_standalone_Example1J8/src/org/knowm/xchart/standalone/readme/SwingWorkerRealTime.java:44: error: cannot find symbol
  @Initializer private void go() {
   ^
  symbol:   class Initializer
  location: class SwingWorkerRealTime
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
